<resources>
    <string name="app_name">Rhythmer</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="Login">Login</string>
    <string name="rhythmer">RhythMer</string>
    <string name="log_in">Log In</string>
    <string name="email_or_username">Nickname or username</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign up</string>
    <string name="todo1">TODO</string>
    <string name="welcome">Welcome,\nget ready to train your rhythm skills!\nHave fun!</string>
    <string name="please_select_your_mode">Please select your mode:</string>
    <string name="beginner">Beginner</string>
    <string name="advanced">Advanced</string>
    <string name="expert">Expert</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="title_activity_how_to">howTo</string>
    <string name="listen_to_the_music">Listen to the music</string>
    <string name="next1">Next</string>
    <string name="welcome_to_rhythmer">Welcome to Rhythmer!</string>
    <string name="welcome_to_rhythmer1">Welcome to Rhythmer</string>
    <string name="listen_to_the_music1">Listen to the music…</string>
    <string name="todo">TODO</string>
    <string name="ear">ear</string>
    <string name="tap_in_the_green_button_along_with_the_music">Tap_the_green\nbutton along with the beat…</string>
    <string name="tap_the_green_nbutton_along_with_the_beat">Tap the green button along with the beat…</string>
    <string name="next2">Next</string>
    <string name="backHome">Back_home</string>
    <string name="next4">Next</string>
    <string name="back_home">Back home</string>
    <string name="home">TODO</string>
    <string name="help">TODO</string>
    <string name="play">TODO</string>
    <string name="homesmall">TODO</string>
    <string name="next3">Next</string>
    <string name="next5">next</string>
    <string name="back_to_game">Back to game</string>
    <string name="greenButton">TODO</string>
    <string name="BackToGame">TODO</string>
    <string name="next6">next</string>
    <string name="next">next</string>
    <string name="backgroundbeginner">backgroundBeginner</string>
    <string name="start_game">start game</string>
    <string name="RESTART">RESTART</string>
    <string name="result">Result</string>
    <string name="welcomeToTheGame">Welcome</string>
    <string name="help2">help2</string>
    <string name="help3">help2</string>
    <string name="next_song">Next Song</string>
    <string name="Congrats">Congrats you finished all Beginner Songs!\nNow you can try the advanced ones!\nGOOD LUCK!</string>
    <string name="next_song2">Next Song</string>
    <string name="congrats">Congrats</string>
    <string name="START">START</string>
    <string name="next7">Next</string>
    <string name="rhythms">Then you will hear the rhythms..</string>
    <string name="at_first_you_will_hear_a_metronome">At first you will hear a metronome four times..</string>
    <string name="metronome">TODO</string>
    <string name="tap">Tap the green button along with the beats.To win you need to tap the correct amount of times and at the right time! Have fun!</string>
    <string name="beats"> After the metronome you will hear some drum beats &#8230;</string>
    <string name="first_you_will_hear_a_metronome_four_times">First you will hear a metronome four times &#8230; </string>
    <string name="back_to_game2">Back to game</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="next_level">Next Level</string>
    <string name="goodJob">Good job!\nKeep on going with the next level!</string>
    <string name="goodJob2">Good job!\nKeep on going with the last level!</string>
    <string name="goodJobFinished">Good job!\nYou completed all the levels!\nYou can choose a level to repeat and play again!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congratulations_you_solved_all_the_beginner_level_songs_you_can_continue_with_the_next_level_or_go_back_to_menu">Congratulations, you solved all the beginner level songs,you can continue with the next level or go back to menu!</string>
    <string name="tic">TODO</string>
    <string name="title_activity_metronome_lb">metronomeLB</string>
    <string name="fireworks">fireworks </string>
    <string name="tooEarly">You pressed during the first fourth metronomes.</string>
    <string name="start_with_nthis_level">Start with \nthis level!</string>
    <string name="StartA">Continue with \nthis level!</string>

</resources>

